--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git pull --rebase origin main
         git push https://${{ secrets.GH_PAT_WITHEE }}@github.com/Jeonghee-Han/velog_withee.git
 
     - name: Set up Python
