--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -1,37 +1,42 @@
-name: Update Blog Posts
+name: Update Velog Posts to GitHub
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정
+    - cron: '0 0 * * *'  # 매일 자정 (UTC 기준)
+  workflow_dispatch: # 수동으로 워크플로우를 실행할 수 있도록 추가
 
 jobs:
-  update_blog:
+  update-posts:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Pull latest changes
-      run: git pull --rebase origin main
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GH_PAT_WITHEE }} # push 권한이 있는 PAT 사용
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install feedparser gitpython
 
-    - name: Run script
+    - name: Run Python script to update posts
       run: python scripts/update_blog.py
 
-    - name: Push changes
+    - name: Commit and push if there are changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git push https://${{ secrets.GH_PAT_WITHEE }}@github.com/Jeonghee-Han/velog_withee.git
+        # 변경사항이 있는지 확인
+        if ! git diff --quiet; then
+          git add velog-posts/*
+          git commit -m "📚 velog posts updated"
+          git push
+        else
+          echo "No changes to commit."
+        fi
