--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -32,17 +32,10 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-        # --- ✨ 디버깅을 위해 추가된 부분 시작 ✨ ---
-        echo "--- Listing files in velog-posts directory ---"
-        ls -l velog-posts/
-        echo "--- Checking git status ---"
-        git status
-        # --- ✨ 디버깅을 위해 추가된 부분 끝 ✨ ---
-
         
-        # 변경사항이 있는지 확인
-        if ! git diff --quiet; then
+        # 변경사항(새 파일 포함)이 있는지 확인하는 최종 조건문
+        if [[ -n $(git status --porcelain) ]]; then
+          echo "Changes detected. Committing and pushing..."
           git add velog-posts/*
           git commit -m "📚 velog posts updated"
           git push
